log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output
spec:
  replicas: 2
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: hash-file
          emptyDir: {}
        - name: config-volume
          configMap:
            name: greeting
      containers:
      - name: log-output-writer
        image: eerola/log-output-writer:4.1
        resources:
          requests:
            cpu: "10m"
            memory: "48Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        imagePullPolicy: Always
        volumeMounts:
        - name: hash-file
          mountPath: /usr/src/app/files
      - name: log-output-reader
        image: eerola/log-output-reader:4.1
        resources:
          requests:
            cpu: "10m"
            memory: "48Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 3000
        imagePullPolicy: Always
        volumeMounts:
        - name: hash-file
          mountPath: /usr/src/app/files
        - name: config-volume
          mountPath: /usr/src/app/config
